# Proker

./: .gitignore  Dockerfile  README.md  mix.exs
assets/css/: app.css  phoenix.css  proker.css
assets/js/: app.js  proker.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
functional-tests/: README.md  pyproject.toml
functional-tests/proker_functional_tests/: pages.py
functional-tests/tests/: conftest.py  test_home.py  test_room.py
lib/: proker.ex  proker_web.ex
lib/proker/: application.ex  mailer.ex  room.ex  room_config.ex  room_registry.ex  utils.ex
lib/proker_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/proker_web/controllers/: page_controller.ex  room_controller.ex
lib/proker_web/errors/: room_not_found.ex
lib/proker_web/live/: components.ex  room_live.ex  room_live.html.heex
lib/proker_web/templates/layout/: app.html.heex  live.html.heex  root.html.heex
lib/proker_web/templates/room/: index.html.heex
lib/proker_web/views/: error_helpers.ex  error_view.ex  layout_view.ex  page_view.ex  room_view.ex
test/proker_web/controllers/: page_controller_test.exs  room_controller_test.exs
test/proker_web/views/: error_view_test.exs  layout_view_test.exs  page_view_test.exs
test/support/: conn_case.ex
